5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1602_1015.log
== TEST (2019-03-22 00:50:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

min(a,b,c)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:51:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)

print(var1)

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:52:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var 1 - var 2

print(var1)

-- ERROR:
File "XXXX", line 11
    var3 = (a + b + c) - var 1 - var 2
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:53:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var1 - var2

print(var1)
print(var3)
print(var2)

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:53:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var1 - var2

print(var1)
print(var3)
print(var2)

-- EXECUTION TIME:
0.12563
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:54:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var1 - var2

print(var1)
print(var3)
print(var2)

-- EXECUTION TIME:
0.136687
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:55:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var1 - var2

print(var1)
print(var3)
print(var2)

-- EXECUTION TIME:
0.132058
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:55:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var1 - var2

print(var1)
print(var3)
print(var2)

-- EXECUTION TIME:
0.218198
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:56:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

a = int(input("Insira um valor: "))
b = int(input("Insira um valor: "))
c = int(input("Insira um valor: "))

var1 = min(a,b,c)
var2 = max(a,b,c)
var3 = (a + b + c) - var1 - var2

print(var1)
print(var3)
print(var2)

-- EXECUTION TIME:
0.18004
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
